Java25 (#581)
* Java 25

- JavaFX and SDK update

* v20251011

- version number increased to v20251011

* Minor version

- minor version removed as the bundle contains openjdk

* VM arguments

- VM arguments added

* Message

- comment mesage