@@ -1,2 +1,2 @@
-.\openjdk\bin\java.exe -jar -Xms200m -Xmx500m --class-path "./resources;" --module-path "jag3d.jar;./javafx/lib;./lib;" --module org.applied_geodesy.jag3d/org.applied_geodesy.jag3d.ui.JAG3D
+.\openjdk\bin\java.exe -jar --enable-native-access=javafx.graphics --sun-misc-unsafe-memory-access=allow -Xms500m -Xmx1000m --class-path "./resources;" --module-path "jag3d.jar;./javafx/lib;./lib;" --module org.applied_geodesy.jag3d/org.applied_geodesy.jag3d.ui.JAG3D
 pause
